# cellmech

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  Taskfile.yml  demonstration.ipynb  force_field.npy  force_points.npy  genereate_bead_images.py  kernel_graph.py  pyproject.toml  test.ipynb  test_bead_displacement.py  test_beads_gen.ipynb  test_shape_detection.py  tractionforce.ipynb
.github/workflows/: ci.yml
cellmech/: CMakeLists.txt  __init__.py  bead_detection.py  beads_generator.py  fttc.py  image_filter.py  mechanics.py  tensorop.py  test_beads_gen.ipynb  utils.py
cellmech/cpp_kernel/: image_proc.cpp
cellmech/imgproc/: bead_detection.py  cell_detection.py
data/: force_field.npy  force_points.npy
examples/: bead_processing.ipynb  demonstration.ipynb  tractionforce.ipynb
tests/: __init__.py  test_bead_displacement.py  test_depth_sensitivity.py  test_dummy_force.py  test_fft.py  test_point_force.py  test_rough.py  test_shape_detection.py  test_tensor_contract.py  test_vector_field.py
